<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
   >

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_the_text"
        android:inputType="textMultiLine"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="55dp"
            android:layout_height="28dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_style"
            android:text="@android:string/ok" />

        <CheckBox
            android:id="@+id/chk_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/bold"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chk_I"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/I"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/chk_u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u"
            android:layout_marginLeft="20dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:textColor="#FF0000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/btn_fc"
            android:layout_width="55dp"
            android:layout_height="28dp"
            android:background="@drawable/btn_style"
            android:text="@android:string/ok" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_l"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/left_align" />

        <Button
            android:id="@+id/btn_ce"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginLeft="120dp"
            android:background="@drawable/center_align" />

        <Button
            android:id="@+id/btn_r"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginLeft="130dp"
            android:background="@drawable/right_align" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/file_name" />

        <EditText
            android:id="@+id/fName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/file_name"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_style"
            android:text="@string/_new" />

        <Button
            android:id="@+id/btn_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style"
            android:text="@string/save"
            android:layout_marginLeft="60dp"
            />

        <Button
            android:id="@+id/btn_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style"
            android:text="@string/load"
            android:layout_marginLeft="70dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sof_ech"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bclose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style"
        android:text="@string/close" />

</LinearLayout>